--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
   --color-bg:#c8c8c8;
   --color-text: #222;
   --color-end: #b7b7b7;
-  --color-th: #ddd;
+  --color-td-bg: #ddd;
   --color-important-td:#999;
   --color-blue: #483aad;
 }
@@ -16,6 +16,7 @@
 *,*::before,*::after{
   box-sizing: border-box;
   font-weight: 500;
+  transition: background-color 0.3s, color 0.3s;
 }
 html, body {
   height: 100%;
@@ -24,6 +25,18 @@ html, body {
   background-color: #c8c8c8;
   font-weight: 500;
   color:var( --color-text);
+}
+
+.container{
+  max-width: 1050px;
+  margin:2rem auto;
+  padding: 0 15px;
+}
+img {
+  display: block;
+  max-width:100%;
+  width: 100%;
+  height: auto;
 }
 a ,.title.title-2{
   color: var(--color-red);
@@ -48,15 +61,42 @@ em ,.explanation{
   text-align:center;
 }
 .title.title-2 {
-  font-size:2.5rem;
+  font-size:2rem;
 }
 table {
-  cellspacing
+  border-spacing:0;
 }
 thead {
   background-color: var(--color-text);
   color: var(--color-bg);
 }
-th {
+th,td {
   padding:5px;
+}
+tbody tr:nth-child(2n+1) {
+  background-color: var(--color-td-bg);
+}
+tbody tr:hover {
+  background-color: var(--color-important-td);
+}
+th {
+  color: var(--color-td-bg);
+}
+.description-img {
+  border:2px solid var(--color-red);
+  color: var(--color-td-bg);
+  background-color: var(--color-text);
+  border-radius: 10px;
+  padding: 25px;
+  text-align: center;
+}
+.description-img figcaption {
+  font-style: italic;
+}
+.ending{
+  padding: 25px;
+  margin:25px;
+  border: 2px dashed var(--color-blue);
+  color: var(--color-blue);
+  background-color: var(--color-end);
 }
